# vfad

./: CLAUDE.md  kaggle.json
1_week_intro/: train_colab.ipynb  (+1 more)
2_week_simulator/: .gitignore  experiment_progression.md  learning_plan.md  notes_template.md  pyproject.toml
2_week_simulator/curved_road/exp1/: __main__.py  config.yaml  eval.py  model.json  model.py  notes.md
2_week_simulator/curved_road/exp1/training-data/: vla_dataset_128x128_1775032762942.json  vla_dataset_128x128_1775032856918.json  vla_dataset_128x128_1775032916216.json  (+26 more)
2_week_simulator/curved_road/exp2/: __main__.py  config.yaml  model.json  model.py
2_week_simulator/curved_road/exp3/: __main__.py  config.yaml  model.json  model.py
2_week_simulator/forked_road/exp4/: __main__.py  config.yaml  model.json  model.py
2_week_simulator/forked_road/exp5/: __main__.py  config.yaml  model.json  model.py
2_week_simulator/forked_road/exp6/: __main__.py  config.yaml  model.json  model.py
2_week_simulator/forked_road/exp7/: __main__.py  config.yaml  model.json  model.py
2_week_simulator/forked_road/exp8/: __main__.py  config.yaml  model.json  model.py
2_week_simulator/forked_road/exp9/: __main__.py  config.yaml  model.json  model.py
2_week_simulator/learn/: systemunderstanding.ipynb
2_week_simulator/shared/data/: dataset.py  transforms.py
2_week_simulator/shared/models/: cnn_backbone.py  cvae.py  language_encoder.py  mlp_head.py  transformer.py
2_week_simulator/shared/training/: callbacks.py  metrics.py  trainer.py
2_week_simulator/shared/utils/: config.py  exporter.py  visualize.py
(+17 files in other folders)
